Fixed align in nav

--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ Landing
 	padding: 3rem 5rem;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .landing__logo {
